--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <span class="animate" style="--i:2;"></span>
                 </div>
                 <nav class="navber">
-                    <a href="#index" class="active">index</a>
+                    <a href="#index" class="active">Home</a>
                     <a href="#about">About</a>
                     <a href="#journey">Journey</a>
                     <a href="#skills">Skills</a>
