--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
                     <span class="animate" style="--i:2;"></span>
                 </div>
                 <nav class="navber">
-                    <a href="index.html" class="active">index</a>
+                    <a href="index.html" class="active">Home</a>
                     <a href="#about">About</a>
                     <a href="#journey">Journey</a>
                     <a href="#skills">Skills</a>
